implement per-type leave balance table, manager-scoped stats, UI balance breakdown